force-app/main/default/objects/Master_Case_Type_Regional__c/Master_Case_Type_Regional__c.object-meta.xml
<CustomObject>
    <label>Master Case Type Regional</label>
    <nameField>
        <label>Case Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Case Type Regional</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>