force-app/main/default/objects/Master_Case_Type_Regional__c/fields/Business_Channel__c.field-meta.xml
<CustomField>
    <fullName>Business_Channel__c</fullName>
    <label>Business Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>