force-app/main/default/objects/Master_Case_Type_Regional__c/fields/Case_DMU_Upload_Total__c.field-meta.xml
<CustomField>
    <fullName>Case_DMU_Upload_Total__c</fullName>
    <label>Case DMU Upload Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>