force-app/main/default/objects/Master_Case_Type_Regional__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>