force-app/main/default/objects/Master_Case_Type_Regional__c/fields/PIC_Department_3__c.field-meta.xml
<CustomField>
    <fullName>PIC_Department_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC Department 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Case_Type_Regional_3</relationshipName>
    <type>Lookup</type>
</CustomField>