force-app/main/default/objects/Master_Case_Type_Regional__c/fields/PIC_Department_4__c.field-meta.xml
<CustomField>
    <fullName>PIC_Department_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC Department 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Master_Case_Type_Regional_4</relationshipName>
    <type>Lookup</type>
</CustomField>