force-app/main/default/objects/Master_Case_Type_Regional__c/fields/PIC_Department__c.field-meta.xml
<CustomField>
    <fullName>PIC_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC Department</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MCTR</relationshipName>
    <type>Lookup</type>
</CustomField>