force-app/main/default/objects/Master_Case_Type_Regional__c/fields/Process_DMU_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_DMU_Upload_Date__c</fullName>
    <label>Process DMU Upload Date</label>
    <type>Date</type>
</CustomField>