force-app/main/default/objects/Master_Case_Type_Regional__c/fields/Qualtrics__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualtrics</label>
    <type>Checkbox</type>
</CustomField>