force-app/main/default/objects/Master_Case_Type_Regional__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Corcomm</fullName>
            </value>
            <value>
                <fullName>DMU</fullName>
            </value>
            <value>
                <fullName>EMMA</fullName>
            </value>
            <value>
                <fullName>marketing</fullName>
            </value>
            <value>
                <fullName>NBUW</fullName>
            </value>
            <value>
                <fullName>NBUW/POS</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>TSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>