force-app/main/default/objects/Master_Case_Type_Regional__c/fields/TAT_2__c.field-meta.xml
<CustomField>
    <fullName>TAT_2__c</fullName>
    <label>TAT 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>