force-app/main/default/objects/Master_Case_Type_Regional__c/fields/TAT__c.field-meta.xml
<CustomField>
    <fullName>TAT__c</fullName>
    <label>TAT</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>