force-app/main/default/objects/Master_Case_Type_Regional__c/listViews/AGI_Request.listView-meta.xml
<ListView>
    <fullName>AGI_Request</fullName>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>SLA__c</columns>
    <columns>Active__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Business_Channel__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Department_Queue_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AGI</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Request</value>
    </filters>
    <label>AGI - Request</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>CEO_AGI</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>