force-app/main/default/objects/Master_Case_Type_Regional__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>MOT__c</columns>
    <columns>TAT__c</columns>
    <columns>PIC_Department__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>0. All</label>
    <language>en_US</language>
</ListView>