force-app/main/default/objects/Master_Case_Type_Regional__c/listViews/ALL_AMFS.listView-meta.xml
<ListView>
    <fullName>ALL_AMFS</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Entity__c</columns>
    <columns>Type__c</columns>
    <columns>MOT__c</columns>
    <columns>TAT__c</columns>
    <columns>PIC_Department__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>MOT__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>ALL AMFS</label>
    <language>en_US</language>
</ListView>