force-app/main/default/objects/Master_Case_Type_Regional__c/listViews/AMFS_Request.listView-meta.xml
<ListView>
    <fullName>AMFS_Request</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Type__c</columns>
    <columns>TAT__c</columns>
    <columns>SLA__c</columns>
    <columns>Current_User__c</columns>
    <columns>PIC_Department__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>Description__c</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AMFS</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Request</value>
    </filters>
    <label>AMFS - Request</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>AMFS_CEO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>