force-app/main/default/objects/Master_Case_Type_Regional__c/listViews/MAGI_Request.listView-meta.xml
<ListView>
    <fullName>MAGI_Request</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Type__c</columns>
    <columns>TAT__c</columns>
    <columns>SLA__c</columns>
    <columns>PIC_Department__c</columns>
    <columns>Department_Queue__c</columns>
    <columns>MOT__c</columns>
    <columns>Entity__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>MAGI</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Request</value>
    </filters>
    <label>MAGI - Request</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>MAGI_CEO</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>